--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.8.2</junit.version>
 
+        <jolokia.version>1.2.0</jolokia.version>
+        <slf4j.version>1.7.6</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+
+        <module.metadata.isCoreModule>false</module.metadata.isCoreModule>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +70,28 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-jvm</artifactId>
+            <version>${jolokia.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -91,11 +118,68 @@
                 </configuration>
             </plugin>
 
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>copy_serialized_metadata</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <copy file="${basedir}/src/main/resources/${project.artifactId}-component-metadata.dat" todir="${project.build.outputDirectory}" />
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
     <profiles>
 
+        <profile>
+            <id>metadata</id>
+            <build>
+                <defaultGoal>install</defaultGoal>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>serialize_component_metadata</id>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>org.infinispan.factories.components.ComponentMetadataPersister</mainClass>
+                                    <arguments>
+                                        <argument>${project.build.outputDirectory}</argument>
+                                        <argument>${basedir}/src/main/resources/${project.artifactId}-component-metadata.dat</argument>
+                                    </arguments>
+                                    <systemProperties>
+                                        <systemProperty>
+                                            <key>infinispan.isCoreModule</key>
+                                            <value>${module.metadata.isCoreModule}</value>
+                                        </systemProperty>
+                                    </systemProperties>
+                                    <includeProjectDependencies/>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>node1</id>
             <build>
@@ -107,8 +191,12 @@
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>1.2.1</version>
                         <configuration>
-                            <mainClass>it.redhat.bankit.Main</mainClass>
+                            <executable>java</executable>
                             <arguments>
+                                <argument>-javaagent:${project.basedir}/jolokia-jvm-1.2.0-agent.jar</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>it.redhat.bankit.Main</argument>
                                 <argument>node1</argument>
                             </arguments>
                         </configuration>
